# rcli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  cliff.toml  test.rest
examples/: async.rs  async2.rs  clap.rs  random.rs  subcommand.rs  text_cli.rs  thread.rs  validated_values.rs
fixtures/: b64.txt  blake3.txt  ed25519.pk  ed25519.sk
src/: cli.rs  lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  jwt.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  jwt.rs  text.rs
