[package]
name = "rcli"
version = "0.1.0"                        # will be read as version by clap
edition = "2021"
authors = ["Noah <upupqi.cs@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
clap = { version = "^4.5.4", features = ["derive"] }
csv = "^1.3.0"
rand = "^0.8.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
# serde_toml = "^0.0.1" # replace to toml
serde_yaml = "^0.9"
toml = "^0.8.14"
zxcvbn = "3.0.1"
